# droidrun-monorepo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  all_endpoints.md  config.yaml  pyproject.toml  req.txt  start.sh  todo.md
.agents/skills/ironclaw-mcp/: CLOUD_AGENT.md  GOOGLE_SHEETS_API.md  INTEGRATION.md  OPENCLAW_PROMPT.md  QUICKSTART.md  README.md  mcp_server.py  requirements.txt  skill.yaml
.agents/skills/ironclaw-webhook/: README.md  ironclaw_skill.py  skill.yaml  test_ironclaw_skill.py
apps/gateway/: README.md  config.yaml  pyproject.toml
apps/gateway/src/ironclaw/: __init__.py  main.py
apps/gateway/src/ironclaw/agents/: __init__.py  adb_connection.py  ironclaw_agent.py
apps/gateway/src/ironclaw/api/: alarms.py  chat.py  chat_cloud.py  google_sheets.py  health.py  hitl.py  jobs.py  mobilerun.py  mobilerun_ws.py  openclaw.py  speech.py  tabs.py  wake.py
apps/gateway/src/ironclaw/modules/: __init__.py  job_hunter.py  nanobanana.py  personalization.py  schedule_extractor.py  tab_manager.py  telegram_bot.py  temporal_guardian.py  vapi_interrupter.py
apps/gateway/src/ironclaw/services/: __init__.py  execution_service.py  hitl_service.py  openclaw_service.py  tab_execution_service.py
apps/gateway/src/ironclaw/utils/: __init__.py  config.py  step_parser.py
apps/gateway/tests/: conftest.py  test_hitl_service.py  test_openclaw_webhook.py
apps/job-hunter/: .env.example  GOOGLE_SHEETS_SETUP.md  MOBILERUN_SETUP.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  examples.py  pyproject.toml  setup.sh
apps/job-hunter/src/job_hunter/: __init__.py  agent_factory.py  app.py  config.py  database.py  droidrun_backup.py  google_sheets.py  main.py  mobilerun_agent.py  orchestrator.py  resume_parser.py
apps/job-hunter/src/job_hunter/templates/: index.html
apps/mirror-service/: README-H264-STREAMING.md  README.md  package-lock.json  package.json  server-h264-fmp4.js  server-webrtc.js  server.js  test-mse.html
apps/web/: LINGO_EXAMPLE.tsx  LINGO_README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/.lingo/: metadata.json
apps/web/public/translations/: ar.json  de.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/.lingo/: metadata-build.json  metadata-dev.json
apps/web/src/.lingo/cache/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json
apps/web/src/components/: AttachmentPreview.tsx  CategoryPills.tsx  ChatArea.tsx  ChatInput.tsx  DeviceMirror.tsx  DeviceMirrorCloud.tsx  DeviceMirrorMSE.tsx  DeviceMirrorSimple.tsx  DeviceMirrorWebRTC.tsx  EndpointActions.tsx  LanguageSwitcher.tsx  Sidebar.tsx  SnowAnimation.tsx  SuggestionsList.tsx
apps/web/src/components/ui/: mode-toggle.tsx
apps/web/src/contexts/: DeviceContext.tsx
apps/web/src/hooks/: useAttachments.ts  useLocalThreads.ts  useMobileRunDevices.ts  useSpeechToText.ts
apps/web/src/pages/: Index.tsx
apps/web/src/types/: chat.ts
data/tab_sessions/: .gitkeep
gateway/: daily_bonus_state.json  main.py
tasks/: todo.md
