[project]
name = "ironclaw-monorepo"
version = "0.1.0"
description = "Iron Claw - Mobile-First Autonomous Agent Architecture (Monorepo)"
readme = "README.md"
requires-python = ">=3.11"

# Root workspace dependencies - includes all packages
dependencies = [
    # Gateway dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "droidrun>=0.4.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "aiofiles>=24.0.0",
    "pypdf2>=3.0.0",
    "timezonefinder>=6.5.0",
    "python-telegram-bot>=21.0",
    "llama-index-llms-google-genai>=0.1.0",
    "pyyaml>=6.0.0",
    "google-generativeai>=0.8.6",
    # Job Hunter dependencies
    "flask>=3.1.0",
    "pymongo>=4.10.0",
    "anthropic>=0.76.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.32.0",
    "grpcio>=1.76.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV workspace configuration for monorepo
[tool.uv.workspace]
members = [
    "apps/gateway",
    "apps/job-hunter",
    "packages/shared",
    "packages/adb-client",
    "packages/vapi-client",
]

[tool.uv.sources]
# Local package references
ironclaw-shared = { workspace = true }
ironclaw-adb = { workspace = true }
ironclaw-vapi = { workspace = true }
ironclaw-job-hunter = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["apps/gateway/src/ironclaw"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "apps/gateway/tests",
    "apps/job-hunter/tests",
    "packages/shared/tests",
    "packages/adb-client/tests",
    "packages/vapi-client/tests",
]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
